k8s-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-nginx
  template:
    metadata:
      labels:
        app: todo-nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: todo-nginx-svc
spec:
  type: NodePort
  selector:
    app: todo-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
